# hastur

./: .bazelrc  .bazelrc.local.example  .clang-format  .clang-tidy  .gitignore  .gitlint  .pre-commit-config.yaml  BUILD  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  codecov.yml  hastur.pc.in  main.cpp
archive/: BUILD  brotli.cpp  brotli.h  brotli_fuzz_test.cpp  brotli_test.cpp  gzip_fuzz_test.cpp  lzw.h  lzw_example.cpp  lzw_test.cpp  zlib.cpp  zlib.h  zlib_fuzz_test.cpp  zlib_test.cpp  zstd.cpp  zstd.h  zstd_fuzz_test.cpp  zstd_test.cpp
azm/: BUILD  assembler.h  assembler_test.cpp  azm_example.cpp
bazel/: asio.BUILD  pugixml.BUILD
browser/: BUILD  branding.h  engine.cpp  engine.h  engine_test.cpp  gui.cpp  main.cpp  tui.cpp
bzl/: BUILD  cc_xfail_test.bzl  copts.bzl  defs.bzl  github_archive.bzl  run_fuzz_tests  run_xfail_test  sh_xfail_test.bzl  xfail_test.bzl
cmake/: FindAsio.cmake  Findfmt.cmake  Findspdlog.cmake
css/: BUILD  default.cpp  default.css  default.h  media_query.h  media_query_test.cpp  parse.cpp  parse.h  parser.cpp  parser.h  parser_fuzz_test.cpp  parser_test.cpp  property_id.cpp  property_id.h  property_id_test.cpp  rule.cpp  rule.h  rule_test.cpp  style_sheet.cpp  style_sheet.h  style_sheet_test.cpp
css2/: BUILD  token.cpp  token.h  token_test.cpp  tokenizer.cpp  tokenizer.h  tokenizer_fuzz_test.cpp  tokenizer_test.cpp
dom/: BUILD  dom.cpp  dom.h  dom_test.cpp  xpath.h  xpath_test.cpp
dom2/: BUILD  attr.h  attr_test.cpp  cdata_section.h  cdata_section_test.cpp  character_data.h  character_data_test.cpp  comment.h  comment_test.cpp  document.h  document_fragment.h  document_fragment_test.cpp  document_test.cpp  document_type.h  document_type_test.cpp  element.h  element_test.cpp  node.cpp  node.h  node_test.cpp  processing_instruction.h  processing_instruction_test.cpp  shadow_root.h  text.h  text_test.cpp
engine/: BUILD  engine.cpp  engine.h  engine_test.cpp
etest/: BUILD  colors_disabled_test.cpp  constexpr_test.cpp  cxx_compat.h  disabled_test_test.cpp  etest.cpp  etest.h  etest2.cpp  etest2.h  etest_main.cpp  etest_test.cpp  exception_failure_test.cpp  expect_eq_failure_test.cpp  expect_failure_test.cpp  no_tests_registered_test.cpp  require_eq_failure_test.cpp  require_failure_test.cpp  shuffled_tests_test.cpp  success_test.cpp  test_name_filter_test.cpp  weird_throw_failure_test.cpp
geom/: BUILD  geom.h  geom_test.cpp
gfx/: BUILD  basic_shader.vert  border_shader.frag  canvas_command_saver.h  canvas_command_saver_test.cpp  color.cpp  color.h  color_test.cpp  font.h  font_test.cpp  gfx.cpp  gfx.h  gfx_example.cpp  gfx_test.cpp  icanvas.h  ipainter.h  opengl_canvas.cpp  opengl_canvas.h  opengl_painter.cpp  opengl_painter.h  opengl_shader.cpp  opengl_shader.h  paint_command_saver.h  paint_command_saver_test.cpp  painter.h  rect_shader.frag  sfml_canvas.cpp  sfml_canvas.h  sfml_painter.cpp  sfml_painter.h  vulkan_canvas.cpp  vulkan_canvas.h
html/: BUILD  character_reference.cpp  character_reference.h  character_reference_test.cpp  html5lib_tokenizer_test.cpp  html5lib_tree_construction_test.cpp  iparser_actions.h  parse.cpp  parse.h  parse_error.h  parse_error_test.cpp  parser.cpp  parser.h  parser_actions.h  parser_fuzz_test.cpp  parser_options.h  parser_states.cpp  parser_states.h  parser_states_test.cpp  parser_test.cpp  test_parser.cpp  token.cpp  token.h  token_test.cpp  tokenizer.cpp  tokenizer.h  tokenizer_fuzz_test.cpp  tokenizer_test.cpp
html2/: BUILD  character_reference.cpp  character_reference.h  character_reference_test.cpp  html5lib_test.cpp  html5lib_tokenizer_test.cpp  iparser_actions.h  parse_error.h  parse_error_test.cpp  parser_states.cpp  parser_states.h  parser_states_test.cpp  token.cpp  token.h  token_test.cpp  tokenizer.cpp  tokenizer.h  tokenizer_fuzz_test.cpp  tokenizer_test.cpp  tree_builder.cpp  tree_builder.h  tree_constructor.cpp  tree_constructor.h  tree_constructor_test.cpp
http/: BUILD  get.cpp  get.h
idna/: BUILD  idna_data_processor.cpp  idna_data_processor.py  idna_data_test.cpp  punycode.h  punycode_test.cpp  unicode.cpp  unicode.h  unicode_data_processor.py  unicode_test.cpp  uts46.cpp  uts46.h  uts46_conformance_test.cpp  uts46_test.cpp
img/: BUILD  gif.cpp  gif.h  gif_fuzz_test.cpp  gif_test.cpp  img_example.cpp  jpeg.cpp  jpeg.h  jpeg_fuzz_test.cpp  jpeg_test.cpp  jpeg_turbo.cpp  jpeg_turbo.h  jpeg_turbo_fuzz_test.cpp  jpeg_turbo_test.cpp  png.cpp  png.h  png_fuzz_test.cpp  png_test.cpp  qoi.cpp  qoi.h  qoi_fuzz_test.cpp  qoi_test.cpp
js/: BUILD  ast.h  ast2.h  ast2_test.cpp  ast_executor.h  ast_executor_test.cpp  ast_test.cpp  integration_test.cpp  interpreter.h  interpreter_fuzz_test.cpp  interpreter_test.cpp  parser.h  parser_fuzz_test.cpp  parser_test.cpp  token.cpp  token.h  tokenizer.h  tokenizer_fuzz_test.cpp  tokenizer_test.cpp
json/: BUILD  json.h  json_fuzz_test.cpp  json_test.cpp  json_test_suite_test.cpp
layout/: BUILD  box_model.h  box_model_test.cpp  layout.cpp  layout.h  layout_box.cpp  layout_box.h  layout_box_test.cpp  layout_property_test.cpp  layout_test.cpp  unresolved_value.cpp  unresolved_value.h  unresolved_value_test.cpp
net/: BUILD  ip.cpp  ip.h  ip_test.cpp  socket.cpp  socket.h  socket_test.cpp
os/: BUILD  linux.cpp  linux_test.cpp  memory.h  memory_linux.cpp  memory_test.cpp  memory_windows.cpp  os.h  os_test.cpp  system_info.h  system_info_linux.cpp  system_info_linux_test.cpp  system_info_windows.cpp  windows.cpp  windows_setup.h  xdg.h  xdg_linux.cpp  xdg_linux_test.cpp  xdg_macos.cpp  xdg_test.cpp  xdg_windows.cpp
parser/: BUILD  parser.h  test_parser.cpp
protocol/: BUILD  callback_handler.h  callback_handler_test.cpp  file_handler.cpp  file_handler.h  file_handler_test.cpp  get.cpp  get.h  get_test.cpp  handler_factory.cpp  handler_factory.h  http.cpp  http.h  http_fuzz_test.cpp  http_handler.cpp  http_handler.h  http_test.cpp  https_handler.cpp  https_handler.h  in_memory_cache.h  in_memory_cache_test.cpp  iprotocol_handler.h  multi_protocol_handler.h  multi_protocol_handler_test.cpp  response.cpp  response.h  (+1 more)
(+152 files in other folders)
